--- a/MyHome.Web/Components/Pages/Home.razor
+++ b/MyHome.Web/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+@using MudBlazor
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<MudContainer Class="ma-10">
+    <h1>Mitt hem!</h1>
 
-Welcome to your new app.
+    <MudText Typo="Typo.h6">Mitt hem</MudText>
+</MudContainer>
