--- a/MyHome.Web/Components/Layout/MainLayout.razor
+++ b/MyHome.Web/Components/Layout/MainLayout.razor
@@ -1,8 +1,9 @@
 ﻿@using MudBlazor
 @inherits LayoutComponentBase
 
-<MudThemeProvider />
+<MudThemeProvider IsDarkMode="true" />
 <MudPopoverProvider />
+
 <MudDialogProvider />
 <MudSnackbarProvider />
 <MudLayout>
