--- a/MyHome.Web/Components/Pages/Charts.razor
+++ b/MyHome.Web/Components/Pages/Charts.razor
@@ -1,32 +1,66 @@
 ﻿@page "/charts"
-@using MudBlazor.Components.Chart.Models
-
 @using MudBlazor
 @using MudBlazor.Components.Chart.Models
 @using MyHome.Core.Models.EnergySupplier
-@inject EnergyPriceClient EnergyPriceClient
-
+@inject EnergySupplierClient EnergyPriceClient
 @attribute [StreamRendering(true)]
 @attribute [OutputCache(Duration = 5)]
 
-<MudContainer Class="mt-16">
-    <h1>Elprisöversikt</h1>
-    
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-16">
+    <MudPaper Elevation="0" Class="mb-8">
+        <MudText Typo="Typo.h3" Color="Color.Primary" Class="mb-2">Elprisöversikt</MudText>
+        <MudText Typo="Typo.subtitle1">Översikt över elpriser och prisnivåer över tid</MudText>
+    </MudPaper>
+
     @if (_loading)
     {
-        <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
+        <MudPaper Class="pa-8 d-flex align-center justify-center" Elevation="0">
+            <MudProgressCircular Color="Color.Primary" Indeterminate="true" Size="Size.Large" />
+        </MudPaper>
     }
     else
     {
-        <MudPaper Elevation="2" Class="mt-10">
-            <MudTimeSeriesChart 
-                ChartSeries="@_series" 
-                @bind-SelectedIndex="Index" 
-                Width="100%" 
-                Height="350px" 
-                ChartOptions="@_options" 
-                TimeLabelSpacing="TimeSpan.FromHours(3)" />                
-        </MudPaper>
+        <MudCard Elevation="3" Class="rounded-lg">
+            <MudCardHeader>
+                <CardHeaderContent>
+                    <MudText Typo="Typo.h6" Class="d-flex align-center">
+                        <MudIcon Icon="@Icons.Material.Filled.TrendingUp" Class="mr-2" />
+                        Prisjustering
+                    </MudText>
+                </CardHeaderContent>
+            </MudCardHeader>
+
+            <MudCardContent>
+                <MudPaper Elevation="0" Class="pa-4">
+                    <MudTimeSeriesChart ChartSeries="@_series"
+                                        @bind-SelectedIndex="Index"
+                                        Width="100%"
+                                        Height="400px"
+                                        ChartOptions="@_options"
+                                        TimeLabelSpacing="TimeSpan.FromHours(3)" />
+                </MudPaper>
+
+                @if (Index >= 0 && Index < _series[0].Data.Count)
+                {
+                    <MudPaper Class="mt-4 pa-4" Elevation="0">
+                        <MudGrid>
+                            <MudItem xs="12" sm="6">
+                                <MudText Typo="Typo.subtitle2" Color="Color.Secondary">Tidpunkt</MudText>
+                                <MudText Typo="Typo.body1">@_series[0].Data[Index].DateTime.ToString("g")</MudText>
+                            </MudItem>
+                            <MudItem xs="12" sm="3">
+                                <MudText Typo="Typo.subtitle2" Color="Color.Secondary">Elpris</MudText>
+                                <MudText Typo="Typo.body1">@_series[0].Data[Index].Value.ToString("F2") SEK/kWh</MudText>
+                            </MudItem>
+                            <MudItem xs="12" sm="3">
+                                <MudText Typo="Typo.subtitle2" Color="Color.Secondary">Prisnivå</MudText>
+                                <MudText Typo="Typo.body1">@_series[1].Data[Index].Value.ToString("F1")</MudText>
+                            </MudItem>
+                        </MudGrid>
+                    </MudPaper>
+                }
+            </MudCardContent>
+        </MudCard>
     }
 </MudContainer>
 
