--- a/MyHome.Web/Components/Layout/MainLayout.razor
+++ b/MyHome.Web/Components/Layout/MainLayout.razor
@@ -6,16 +6,15 @@
 
 <MudDialogProvider />
 <MudSnackbarProvider />
+
 <MudLayout>
     <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudText Typo="Typo.h6" Class="ml-4">Mitt hem</MudText>
         <MudSpacer />
         <MudIconButton Icon="@Icons.Material.Filled.Brightness4" Color="Color.Inherit" />
     </MudAppBar>
-    <MudDrawer Open="true" Elevation="2" Variant="@DrawerVariant.Persistent" Width="240px">
-        <MudDrawerHeader>
-            <MudText Typo="Typo.h6">Navigation</MudText>
-        </MudDrawerHeader>
+    <MudDrawer @bind-Open="@_drawerOpen">
         <MyNavMenu />
     </MudDrawer>
     <MudMainContent>
@@ -24,3 +23,12 @@
         </MudContainer>
     </MudMainContent>
 </MudLayout>
+
+@code {
+    bool _drawerOpen = false;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+}
