--- a/MyHome.Web/Components/Pages/EnergyCharts.razor
+++ b/MyHome.Web/Components/Pages/EnergyCharts.razor
@@ -1,4 +1,4 @@
-﻿@page "/charts"
+﻿@page "/energycharts"
 @using MudBlazor
 @using MudBlazor.Components.Chart.Models
 @using MyHome.Core.Models.EnergySupplier
