--- a/MyHome.Web/Components/Pages/EnergyLists.razor
+++ b/MyHome.Web/Components/Pages/EnergyLists.razor
@@ -1,4 +1,4 @@
-﻿@page "/table"
+﻿@page "/energylists"
 @using MudBlazor.Components.Chart.Models
 @using MyHome.Core.Models.EnergySupplier
 @using MudBlazor
