--- a/MyHome.Web/Components/Layout/MyNavMenu.razor
+++ b/MyHome.Web/Components/Layout/MyNavMenu.razor
@@ -15,6 +15,9 @@
     <MudNavLink Href="/energylists" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableChart">
         Priser - Tabell
     </MudNavLink>
+    <MudNavLink Href="/audit" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Event">
+        Händelser
+    </MudNavLink>
 
     <MudNavGroup Title="Settings" Icon="@Icons.Material.Filled.Settings" Expanded="false">
         <MudNavLink Href="/profile" Match="NavLinkMatch.Prefix">Profile</MudNavLink>
