Refactor heat regulation services and energy price logic
Renamed `HeatResulatorService` to `HeatRegulatorService` and updated all references. Modified `AddHeatPumpServices` to register the new service. Updated service retrieval in `HeatRegulatorHost` and `EnergyConsumptionObserver`. Introduced `EnergyPriceCalculator` and `EnergyPriceThresholds` classes for improved energy price management. Enhanced `HomeConfiguration` with methods for heat offsets and comfort modes. Updated `EnergySupplierService` to retrieve all available energy prices and adjusted method signatures. Added a consumption column in `EnergyLists.razor`. Removed unused imports and classes for better maintainability.

--- a/MyHome.Web/Components/Pages/EnergyLists.razor
+++ b/MyHome.Web/Components/Pages/EnergyLists.razor
@@ -20,13 +20,14 @@
             <MudTh>Pris (sek)</MudTh>
             <MudTh>Prisnivå</MudTh>
             <MudTh>Värmereglering</MudTh>
+            <MudTh>Förbrukning</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="Datum">@context.Time.ToString()</MudTd>
             <MudTd DataLabel="Pris (sek)">@Math.Round(@context.Price, 2) SEK</MudTd>
             <MudTd DataLabel="Prisnivå">@context.PriceLevel.ToString()</MudTd>
             <MudTd DataLabel="Värmereglering">@context.RelativePriceLevel</MudTd>
-
+            <MudTd DataLabel="Förbrukning">@context.Consumption KwH</MudTd>
         </RowTemplate>
     </MudTable>
 </MudContainer>
