--- a/MyHome.Web/Components/Pages/Home.razor
+++ b/MyHome.Web/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using MudBlazor
-@using MyHome.Core.Models.WifiSocket
+@using MyHome.Core.Models.Integrations.WifiSocket
 @rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
