--- a/MyHome.Web/Components/WifiSocketStatus.razor
+++ b/MyHome.Web/Components/WifiSocketStatus.razor
@@ -1,5 +1,5 @@
 ﻿@using MudBlazor
-@using MyHome.Core.Models.WifiSocket
+@using MyHome.Core.Models.Integrations.WifiSocket
 
 <MudCard Elevation="3" Class="rounded-lg ma-5">
     <MudCardHeader Class="pb-0">
