Price threashold UI

--- a/MyHome.Web/Components/Pages/EnergyLists.razor
+++ b/MyHome.Web/Components/Pages/EnergyLists.razor
@@ -23,7 +23,7 @@
             <MudTh>Förbrukning</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Datum">@context.Time.ToString()</MudTd>
+            <MudTd DataLabel="Datum">@context.StartsAt.ToString()</MudTd>
             <MudTd DataLabel="Pris (sek)">@Math.Round(@context.Price, 2) SEK</MudTd>
             <MudTd DataLabel="Prisnivå">@context.PriceLevel.ToString()</MudTd>
             <MudTd DataLabel="Värmereglering">@context.RelativePriceLevel</MudTd>
