--- a/MyHome.Web/Components/Pages/EnergyCharts.razor
+++ b/MyHome.Web/Components/Pages/EnergyCharts.razor
@@ -19,7 +19,7 @@
     }
     else
     {
-        <MudCard Elevation="3" Class="rounded-lg">
+        <MudCard Elevation="3" Class="rounded-lg mb-8">
             <MudCardHeader>
                 <CardHeaderContent>
                     <MudText Typo="Typo.h6" Class="d-flex align-center">
@@ -60,6 +60,8 @@
                 }
             </MudCardContent>
         </MudCard>
+
+        <PriceThearsholds />
     }
 </MudContainer>
 
