--- a/MyHome.Web/Components/Pages/EnergyCharts.razor
+++ b/MyHome.Web/Components/Pages/EnergyCharts.razor
@@ -61,7 +61,7 @@
             </MudCardContent>
         </MudCard>
 
-        <PriceThearsholds />
+        <PriceThearsholds OnDataReloadRequested="OnInitializedAsync" />
     }
 </MudContainer>
 
