--- a/MyHome.Web/Components/Layout/MyNavMenu.razor
+++ b/MyHome.Web/Components/Layout/MyNavMenu.razor
@@ -18,9 +18,12 @@
     <MudNavLink Href="/audit" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Event">
         Händelser
     </MudNavLink>
+    <MudNavLink Href="/settings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">
+        Inställningar
+    </MudNavLink>
 
-    <MudNavGroup Title="Settings" Icon="@Icons.Material.Filled.Settings" Expanded="false">
+@*     <MudNavGroup Title="Settings" Icon="@Icons.Material.Filled.Settings" Expanded="false">
         <MudNavLink Href="/profile" Match="NavLinkMatch.Prefix">Profile</MudNavLink>
         <MudNavLink Href="/security" Match="NavLinkMatch.Prefix">Security</MudNavLink>
-    </MudNavGroup>
+    </MudNavGroup> *@
 </MudNavMenu>
