--- a/MyHome.Web/Components/Pages/Home.razor
+++ b/MyHome.Web/Components/Pages/Home.razor
@@ -3,7 +3,7 @@
 @using MyHome.Core.Models.Integrations.WifiSocket
 @rendermode InteractiveServer
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Hem</PageTitle>
 <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-10">
     <MudText Typo="Typo.h2" Color="Color.Primary" Class="mb-8">Mitt Hem</MudText>
     <EnergyMeter />
