--- a/MyHome.Web/Components/PriceThearsholds.razor
+++ b/MyHome.Web/Components/PriceThearsholds.razor
@@ -45,7 +45,7 @@
 
 @code {
     [Inject]
-    private ProfilesClient ProfilesClient { get; set; } = default!;
+    private PriceThearsholdsClient ProfilesClient { get; set; } = default!;
 
     [Inject]
     private ISnackbar Snackbar { get; set; } = default!;
