--- a/MyHome.Web/Components/Layout/MyNavMenu.razor
+++ b/MyHome.Web/Components/Layout/MyNavMenu.razor
@@ -9,7 +9,7 @@
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">
         Hem
     </MudNavLink>
-    <MudNavLink Href="/energycharts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timeline">
+    <MudNavLink Href="/charts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timeline">
         Priser - Graf
     </MudNavLink>
     <MudNavLink Href="/energylists" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableChart">
