--- a/MyHome.Web/Components/Pages/Settings.razor
+++ b/MyHome.Web/Components/Pages/Settings.razor
@@ -4,7 +4,6 @@
 @using MyHome.Core.Models.Entities.Profiles
 @using MyHome.Core.Models.Integrations.HeatPump
 @using MyHome.Core.Models.Interfaces
-@using MyHome.Core.Models.Interfaces
 @using MyHome.Web.ExternalClients
 
 <PageTitle>Inställningar</PageTitle>
@@ -24,11 +23,11 @@
             </MudItem>
 
             <MudItem xs="12" sm="6">
-                <ModeProfileCard Profile="@Profile.ComfortModes" Title="Värmepump - Vatten Komfortläge"></ModeProfileCard>
+                <DeviceSettingsProfile T="ComfortMode" Profile="@Profile.ComfortModes" Title="Värmepump - Vatten Komfortläge"></DeviceSettingsProfile>
             </MudItem>
 
             <MudItem xs="12" sm="6">
-                <ModeProfileCard Profile="@Profile.OpModes" Title="Värmepump - Elpatron Driftläge"></ModeProfileCard>
+                <DeviceSettingsProfile T="OpMode" Profile="@Profile.OpModes" Title="Värmepump - Elpatron Driftläge"></DeviceSettingsProfile>
             </MudItem>
 
             <MudItem xs="12" sm="6">
