Replace SettingsProfileCard with DeviceProfileCard
Updated Settings.razor to use DeviceProfileCard and
DeviceProfileEnumCard components for displaying heating
and comfort mode profiles. Maintained loading indicator
consistency during data fetching.

--- a/MyHome.Web/Components/DeviceProfileCard.razor
+++ b/MyHome.Web/Components/DeviceProfileCard.razor
@@ -40,7 +40,7 @@
         }
         else
         {
-            <MudProgressCircular Indeterminate="true" Color="Color.Primary" /> @* Show a loading indicator while fetching data *@
+            <MudProgressCircular Indeterminate="true" Color="Color.Primary" />
         }
     </MudCardContent>
 </MudCard>
