--- a/MyHome.Web/Components/Pages/Home.razor
+++ b/MyHome.Web/Components/Pages/Home.razor
@@ -6,7 +6,7 @@
 <PageTitle>Hem</PageTitle>
 <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-10">
     <MudText Typo="Typo.h2" Color="Color.Primary" Class="mb-8">Mitt Hem</MudText>
-    <EnergyMeter />
+    <Statistics />
     <MudGrid>
         <MudItem xs="12" sm="6">
             <WifiSocketStatus WifiSocketname="WifiSocketName.Garage" />
