Update time label spacing in MudTimeSeriesChart
Changed TimeLabelSpacing from hourly to daily intervals.

--- a/MyHome.Web/Components/SensorDataChart.razor
+++ b/MyHome.Web/Components/SensorDataChart.razor
@@ -28,7 +28,7 @@
                                     Width="100%"
                                     Height="400px"
                                     ChartOptions="@_options"
-                                    TimeLabelSpacing="TimeSpan.FromHours(1)" />
+                                    TimeLabelSpacing="TimeSpan.FromDays(1)" />
             </MudPaper>
         }
     </MudCardContent>
