Change tibber price resolution to 15 mins

--- a/MyHome.Web/Components/PriceThearsholdsCard.razor
+++ b/MyHome.Web/Components/PriceThearsholdsCard.razor
@@ -32,7 +32,7 @@
                     <MudNumericField @bind-Value=@Profile.Extreme Label="Gräns för extremt högt pris" Step="0.1m" Min="1" Max="10"></MudNumericField>
                 </MudItem>
                 <MudItem>
-                    <MudNumericField @bind-Value=@Profile.InternalPriceLevelRange Label="Timmar för beräkning av prisnivå" Step="1" Min="4" Max="24"></MudNumericField>
+                    <MudNumericField @bind-Value=@Profile.InternalPriceLevelRangeInHours Label="Timmar för beräkning av prisnivå" Step="1" Min="4" Max="24"></MudNumericField>
                 </MudItem>
             </MudStack>
         }
