Refactor charts and update UI components
Disabled automatic browser launch in `launchSettings.json` for both "https" and "http" profiles. Updated `EnergyConsumptionCharts.razor.cs` to adjust chart options and series, including adding a new `costChart`. Refactored `Home.razor` to replace `SensorDataChart` and `Statistics` with a new grid layout featuring `EneryCost` and `EnergyConsumption` components. Completely refactored `Statistics.razor` to use placeholder components. Added new `EnergyConsumption.razor` and `EneryCost.razor` files to display energy consumption and cost data with refresh functionality.

--- a/MyHome.Web/Components/Pages/Home.razor
+++ b/MyHome.Web/Components/Pages/Home.razor
@@ -6,8 +6,15 @@
 <PageTitle>Hem</PageTitle>
 <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-10">
     <MudText Typo="Typo.h2" Color="Color.Primary" Class="mb-8">Mitt Hem</MudText>
-    <SensorDataChart/>
-    <Statistics />
+    @* <SensorDataChart/> *@
+    <MudGrid>
+        <MudItem xs="6">
+            <EneryCost />
+        </MudItem>
+        <MudItem xs="6">
+            <EnergyConsumption />
+        </MudItem>
+    </MudGrid>
     <MudGrid>
         <MudItem xs="12" sm="6">
             <WifiSocketStatus WifiSocketname="WifiSocketName.Garage" />
